<resources>
    <string name="app_name">NavigationProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>
    <string name="hi">hi</string>
    <string name="name">Name</string>
    <string name="textview">TextView</string>
    <string name="display_image_1">Display Image 1</string>
    <string name="display_image_3">Display Image 3</string>
    <string name="display_image_2">Display Image 2</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
</resources>